--- a/style.css
+++ b/style.css
@@ -52,3 +52,21 @@ button {
   text-shadow: 1px 2px 0.5px rgba(0, 0, 0, 0.2);
 }
 
+/* Botón Pausar */
+.btn-pausa {
+  background-color: #ff62b4;
+}
+
+/* Botón Reanudar */
+.btn-reanudar {
+  background-color: 	#ff81e3;
+}
+
+/* Botón Reiniciar */
+.btn-reiniciar {
+  background-color: #fc9fff;
+}
+.btn-reiniciar:hover {
+  background-color: #865f9a;
+}
+
