--- a/style.css
+++ b/style.css
@@ -91,8 +91,12 @@ button {
   background-color: #5f7a9a;
 }
 
-/* Animación "botón hundido" para Reiniciar */
-.btn-reiniciar:active {
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3) inset;
-  transform: scale(0.75);
+/* Botón Volver a Jugar */
+.btn-volver {
+  background-color: #ff62b4;
+  transition: all 0.3s ease;
+}
+
+.btn-volver:hover {
+  background-color: #865f9a;
 }
